fdo#79599: use \highlightN instead of \chcbpatN in RTF import and export

Reviewed on:
	https://gerrit.libreoffice.org/9776

(cherry picked from commit 7eafd8ccac56d7503b4287dfa3acac2cf0560b20)

Conflicts:
	sw/qa/extras/rtfexport/rtfexport.cxx

Change-Id: I98ef606fb73368a3c275819cb83b936e2162769d
Reviewed-on: https://gerrit.libreoffice.org/10813
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>