writerfilter/source/dmapper/DomainMapper.cxx
@@ -1336,6 +1336,8 @@ void DomainMapper::sprmWithProps( Sprm& rSprm, PropertyMapPtr rContext )
                 rContext->Insert(PROP_CHAR_BACK_COLOR, uno::makeAny( nColor ));
             else if (mnBackgroundColor)
                 rContext->Insert(PROP_CHAR_BACK_COLOR, uno::makeAny( mnBackgroundColor ));
+            else
+                rContext->Insert(PROP_CHAR_BACK_COLOR, uno::makeAny( nIntValue ));
         }
         break;
     case NS_ooxml::LN_EG_RPrBase_em:
